--- a/AboutMe.html
+++ b/AboutMe.html
@@ -53,7 +53,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary nav-text btn" href="amResume.pdf">
+                            <a class="nav-link text-secondary nav-text btn" href="https://indd.adobe.com/view/e30afa0e-9c47-43a1-826c-b71c5287eeed">
                                 <h5>
                                     resume
                                 </h5>
