--- a/PANDA.html
+++ b/PANDA.html
@@ -53,7 +53,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary nav-text btn" href="amResume.pdf">
+                            <a class="nav-link text-secondary nav-text btn" href="https://indd.adobe.com/view/e30afa0e-9c47-43a1-826c-b71c5287eeed">
                                 <h5>
                                     resume
                                 </h5>
@@ -167,7 +167,7 @@
                             In the near future, I will be looking at ideas to use more pipe-like images and more emphasis on puzzles.
                         </p>
                         <p>
-                            
+
                         </p>
 
 
