--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-secondary nav-text btn" href="https://indd.adobe.com/view/e30afa0e-9c47-43a1-826c-b71c5287eeed">
+                        <a class="nav-link text-secondary nav-text btn" href="https://amayasmali.github.io/FinalPortfolio/amResume.pdf">
                             <h5>
                                 resume
                             </h5>
