--- a/Sparrowprojects.html
+++ b/Sparrowprojects.html
@@ -74,7 +74,7 @@
                 <image src="sparrowlogin.png" width='340' height="500" alt="banner"></image>
           </div>
           <div>
-              <image src="sparrowheadboard.png" width="770" height="500" alt="banner"></image>
+              <image src="Sparrowheadboard.png" width="770" height="500" alt="banner"></image>
 
           </div>
           <div>
