--- a/Sparrowprojects.html
+++ b/Sparrowprojects.html
@@ -144,7 +144,7 @@
                         <p>
                             This was the flow I designed for users finding health care and then making an appointment after 
                         </p>
-                        <iframe width="650" height="500" src="https://youtu.be/0alwDRd1NKU"></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/0alwDRd1NKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                         <p>
                             Overall, our objectives with this app is to emphasize a simple way to go through healthcare and breaking the barriers with language. 
