--- a/Sparrowprojects.html
+++ b/Sparrowprojects.html
@@ -144,7 +144,7 @@
                         <p>
                             This was the flow I designed for users finding health care and then making an appointment after 
                         </p>
-                        <image src="findhealthcare.gif"></image>
+                        <image src="findhealthcare.gif" width="300" height="550"></image>
 
                         <p>
                             Overall, our objectives with this app is to emphasize a simple way to go through healthcare and breaking the barriers with language. 
