--- a/Sparrowprojects.html
+++ b/Sparrowprojects.html
@@ -149,7 +149,7 @@
                             While we thought the UI and flow made sense, that didn't mean others did. We conducted more user testing. We went around and asked other classmates to test out our app. Before the user testing began, I asked participants about their experience with health insurance and health care in general. After their responses, we began the demo. I asked them if they can do the following task: interact with the dashboard and find a health care provider. I sat down an appropriate distance away from the participants and observed how they interacted with the flows. I noticed there was some hesitation on certain screens and kept that in mind. After the participants finished the tasks, I asked follow up questions. I asked them to describe their experience using the app, asked them if they could explain their thought process on screens they hesitated on or tapped on areas where there wasn't an active button. 
 
                         </p> <br>
-                        <image src="../usertesting.jpg" class="center" width="550" height="400"></image>
+                        <image src="usertesting.JPG" class="center" width="550" height="400"></image>
                         <p>
                             We recorded their responses and did more redesigning on the application.
                         </p>
